--- a/public/styles/themes/theme.css
+++ b/public/styles/themes/theme.css
@@ -29,3 +29,8 @@ form > button {
     background-color: var(--text-2);
 }
 
+.notice-success {
+    background-color: var(--swatch-5);
+    color: var(--text-1);
+}
+
