--- a/public/styles/themes/theme.css
+++ b/public/styles/themes/theme.css
@@ -1,36 +1,36 @@
 /*  Theme Color */
 html {
-    background: var(--surface-1);
-    color: var(--text-1);
+    background: var(--primary);
+    color: var(--secondary);
 }
 
 small {
-    color: var(--text-2);
+    color: var(--secondary);
 }
 label{
-    color: var(--swatch-10);
+    color: var(--primary);
 }
 
 input[type="radio"] + label{
-    color: var(--text-1);
-    border-color: var(--swatch-5);
+    color: var(--secondary);
+    border-color: var(--secondary);
 }
 
 input[type="radio"]:checked + label{
-    border-color: var(--text-2);
-    color: var(--text-2);
+    border-color: var(--primary);
+    color: var(--secondary);
 }
 
 textarea, .email-parent{
-    border-color: var(--text-2);
+    border-color: var(--secondary);
 }
 
 form > button {
-    background-color: var(--text-2);
+    background-color: var(--secondary);
 }
 
 .notice-success {
     background-color: var(--swatch-5);
-    color: var(--text-1);
+    color: var(--primary);
 }
 
