--- a/public/styles/themes/variables.css
+++ b/public/styles/themes/variables.css
@@ -1,34 +1,23 @@
 html {
     --hue: 300; /* change color of site | oklch.com */
-
-
-    --swatch-0: oklch(100% 0 var(--hue));
     --swatch-1: oklch(99% .05 var(--hue));
     --swatch-2: oklch(90% .1 var(--hue));
     --swatch-3: oklch(80% .2 var(--hue));
-    --swatch-4: oklch(72% .25 var(--hue));
-    --swatch-5: oklch(67% .31 var(--hue));
-    --swatch-6: oklch(50% .27 var(--hue));
-    --swatch-7: oklch(35% .25 var(--hue));
-    --swatch-8: oklch(25% .2 var(--hue));
-    --swatch-9: oklch(13% .2 var(--hue));
-    --swatch-10: oklch(5% .1 var(--hue));
+    --swatch-4: oklch(67% .31 var(--hue));
+    --swatch-5: oklch(25% .2 var(--hue));
+    --swatch-6: oklch(13% .2 var(--hue));
+    --swatch-7: oklch(5% .1 var(--hue));
 
-    --text-1: var(--swatch-1);
-    --text-2: var(--swatch-5);
-    --surface-1: var(--swatch-10);
-    --surface-2: var(--swatch-9);
-    --surface-3: var(--swatch-8);
+    --primary: var(--swatch-1);
+    --secondary: var(--swatch-4);
+    --text: var(--swatch-7);
 
-    --gradient: linear-gradient(90deg, var(--swatch-3), var(--swatch-5),var(--swatch-3));
+    --gradient: linear-gradient(90deg, var(--swatch-3), var(--swatch-4),var(--swatch-3));
 }
 
 @media (prefers-color-scheme: light) {
     html {
-        --text-1: var(--swatch-10);
-        --text-2: var(--swatch-5);
-        --surface-1: var(--swatch-1);
-        --surface-2: var(--swatch-2);
-        --surface-3: var(--swatch-3);
+        --primary: var(--swatch-7);
+        --secondary: var(--swatch-4);
     }
 }
