--- a/public/styles/layout/main.css
+++ b/public/styles/layout/main.css
@@ -1,12 +1,12 @@
 main{
-    margin: 0 15%;
+    margin: 0 20%;
 }
 
 h1{
     text-align: center;
     font-weight: 800;
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 3rem;
     background-image: var(--gradient);
     background-clip: text;
     -webkit-background-clip: text;
@@ -14,12 +14,14 @@ h1{
     background-size: 60%;
     animation: bg-animation 10s infinite;
 }
+
 div{
     margin-bottom: 2rem;
 }
+
 h2{
-    font-size: 3rem;
-    color: var(--text-2);
+    font-size: 2rem;
+    color: var(--primary);
 }
 
 @keyframes bg-animation {
