--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,10 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('styles/style.css') }}">
+            <link rel="stylesheet" href="{{ asset('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css') }}" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         {% endblock %}
     </head>
-    <body>
+    <body class="container-fluid mt-2">
         {% block body %}
 
         {% endblock %}
