--- a/templates/main/_form.html.twig
+++ b/templates/main/_form.html.twig
@@ -3,7 +3,7 @@
     {{ form_row(questionForm.question1) }}
     {{ form_row(questionForm.question2) }}
     {{ form_row(questionForm.question3) }}
-    <button type="submit">Envoyer</button>
+    <button type="submit" class="mt-2 btn btn-success">Envoyer</button>
 {{ form_end(questionForm) }}
 
 
