--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -7,7 +7,9 @@
         <h1>Questionnaire</h1>
     </header>
     <main>
-        {{ include('main/_notice.html.twig') }}
-        {{ include('main/_form.html.twig') }}
+        <div class="row">
+            {{ include('main/_notice.html.twig') }}
+            {{ include('main/_form.html.twig') }}
+        </div>
     </main>
 {% endblock %}
